fix broken interativity with globe on desktop

--- a/src/sass/splash.scss
+++ b/src/sass/splash.scss
@@ -10,13 +10,19 @@
   &__title {
     font-size: 3rem;
     line-height: 1;
+    position: relative;
+    z-index: 1;
   }
   &__welcome {
     max-width: 54ch;
     margin: 1em 0;
+    position: relative;
+    z-index: 1;
   }
   &__links {
     display: flex;
+    position: relative;
+    z-index: 1;
   }
   &__link {
     display: block;
@@ -62,7 +68,6 @@
     height: 100vmin;
     position: absolute;
     top: 0;
-    z-index: -1;
   }
 }
 
